--- a/css/main.css
+++ b/css/main.css
@@ -20,12 +20,12 @@ main {
 
 .weather-info {
     height: auto;
-    width: 40%;
+    width: 60%;
     max-width: 1000px;
     max-height: 700px;
     padding: 5%;
     border-radius: 10px;
-    background-color: #fff;
+    background-color: orange;
     box-shadow: 0px 0px 10px 3px rgba(36, 36, 36, .05);
     transition-duration: .5s;
     transition-property: opacity;
@@ -66,7 +66,12 @@ main {
     align-items: center;
 }
 
-.weather-info_btn-return {
+.weather-info__city span {
+    width: 50%;
+}
+
+.weather-info__btn-return {
+
     padding: 5px 25px;
     border: 2px solid black;
 }
